--- a/index-masuk.html
+++ b/index-masuk.html
@@ -414,7 +414,7 @@
     <div id="loading">
       <p></p>
     </div>
-    <button style="display: fixed; bottom: 0; right:0;" type="button" name="dark_light" onclick="toggleDarkLight()" title="Toggle dark/light mode">🌛</button>
+    <button id="dark-mode"style=" background:#ccc;width: 40px; height: 40px; position: fixed; bottom: 10px; right:10px;" type="button" name="dark_light" onclick="toggleDarkLight()" title="Toggle dark/light mode">🌛</button>
 
 
     <script src="js/loading.js"></script>
