--- a/view.html
+++ b/view.html
@@ -18,7 +18,7 @@
     <meta name="theme-color" content="#ffffff">
 </head>
 <body>
-    <div class="nav">
+    <div class="nav" id="navbar">
         <div class="isi">
             <div class="logo">
                 <a href="index.html"><img class="logo" src="img/BACA KOMIK ICON.png" alt=""></a>
@@ -42,5 +42,7 @@
         <img src="img/komik/pg4.jpg" alt="">
         <img src="img/komik/pg5.jpg" alt="">
     </div>
+
+    <script src="js/nav_view.js" charset="utf-8"></script>
 </body>
 </html>
