--- a/index-masuk.html
+++ b/index-masuk.html
@@ -153,7 +153,7 @@
                     </div>
                     <div class="cover1">
                         <div>
-                            <a href="detail.html">
+                            <a href="detail-masuk.html">
                                 <img src="img/si juki- cari kerja142.jpg" alt="cover" >
                                 <div>
                                     <p class="judul">Si Juki</p>
@@ -164,7 +164,7 @@
                     </div>
                     <div class="cover1">
                         <div>
-                            <a href="detail.html">
+                            <a href="detail-masuk.html">
                                 <img src="img/si nopal142.jpg" alt="cover" >
                                 <div>
                                     <p class="judul">Si Nopal</p>
@@ -175,7 +175,7 @@
                     </div>
                     <div class="cover1">
                         <div>
-                            <a href="detail.html">
+                            <a href="detail-masuk.html">
                                 <img src="img/garudayana142.jpg" alt="cover" >
                                 <div>
                                     <p class="judul">Garudayana</p>
@@ -186,7 +186,7 @@
                     </div>
                     <div class="cover1">
                         <div>
-                            <a href="detail.html">
+                            <a href="detail-masuk.html">
                                 <img src="img/dalang pelo142.jpg" alt="cover" >
                                 <div>
                                     <p class="judul">Dalang Pelo</p>
@@ -197,7 +197,7 @@
                     </div>
                     <div class="cover1">
                         <div>
-                            <a href="detail.html">
+                            <a href="detail-masuk.html">
                                 <img src="img/garudayana142.jpg" alt="cover" >
                                 <div>
                                     <p class="judul">Garudayana</p>
@@ -208,7 +208,7 @@
                     </div>
                     <div class="cover1">
                         <div>
-                            <a href="detail.html">
+                            <a href="detail-masuk.html">
                                 <img src="img/dalang pelo142.jpg" alt="cover" >
                                 <div>
                                     <p class="judul">Dalang Pelo</p>
@@ -241,14 +241,14 @@
                     <div class="row">
                         <div class="column">
                             <div class="card">
-                                <a href="detail.html">
+                                <a href="detail-masuk.html">
                                     <img src="img/si juki-keroyokan77.jpg" alt="cover" sizes="20%" >
                                 </a>
                             </div>
                         </div>
                         <div class="column">
                             <div class="card">
-                                <a href="detail.html"><p class="judul">Si Juki</p></a>
+                                <a href="detail-masuk.html"><p class="judul">Si Juki</p></a>
                             </div>
                         </div>
                         <div class="column">
