--- a/view.html
+++ b/view.html
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <link rel="stylesheet" href="css/view.css">
+    <link rel="stylesheet" href="css/style.css">
     <link href="https://fonts.googleapis.com/css?family=Roboto&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
     <title>BACA KOMIK</title>
@@ -35,14 +36,15 @@
             </div>
         </div>
     </div>
-    <div class="konten">
+    <div class="kontenn">
         <img src="img/komik/pg1.jpg" alt="">
         <img src="img/komik/pg2.jpg" alt="">
         <img src="img/komik/pg3.jpg" alt="">
         <img src="img/komik/pg4.jpg" alt="">
         <img src="img/komik/pg5.jpg" alt="">
     </div>
-
+    <button id="dark-mode"style="cursor: pointer; border-radius: 50%; background:#ccc;width: 40px; height: 40px; position: fixed; bottom: 20px; right:20px;" type="button" name="dark_light" onclick="toggleDarkLight()" title="Toggle dark/light mode">🌛</button>
+    <script src="js/dark-mode.js"></script>
     <script src="js/nav_view.js" charset="utf-8"></script>
 </body>
 </html>
