admin menu done

--- a/admin-akun.html
+++ b/admin-akun.html
@@ -20,33 +20,31 @@
   <title>Document</title>
 </head>
 <body>
-
   <!-- menu kiri -->
-    <div class="left">
+  <div class="left">
     <!-- profil -->
-      <div class="profil">
-        <i  style="margin-top:10px; color:#2095F2;" class="fa fa-user-circle fa-4x" aria-hidden="true"></i>
-        <p>administrator</p>
-      </div>
+    <div class="profil">
+      <i  style="margin-top:10px; color:#2095F2;" class="fa fa-user-circle fa-4x" aria-hidden="true"></i>
+      <p>administrator</p>
+    </div>
     <!-- menu -->
-      <div class="menu">
-        <li><a style="color: #fff;" class="active" href="admin.html">DASHBOARD</a> </li>
-        <li><a href="admin-akun.html">SEMUA AKUN</a> </li>
-        <li><a style="color: red;" href="index.html">LOGOUT</a></li>
-      </div>
+    <div class="menu">
+      <li><a href="admin.html">DASHBOARD</a> </li>
+      <li><a style="color: #fff;"  class="active" href="admin-akun.html">SEMUA AKUN</a> </li>
+      <li><a style="color: red;" href="index.html">LOGOUT</a></li>
     </div>
+  </div>
 
-    <!-- konten kanan -->
-    <div class="right">
-      <h1>DASHBOARD</h1>
+  <!-- konten kanan -->
+  <div class="right">
+    <h1>SEMUA AKUN</h1>
 
-    </div>
+  </div>
 
 <!-- loading -->
     <div id="loading">
       <p></p>
     </div>
   <script src="js/loading.js"></script>
-
 </body>
 </html>
