update darkmode di saat masuk
untuk sementara fitur darkmode hanya tersedia bagi yang telah masuk

--- a/komikSaya.html
+++ b/komikSaya.html
@@ -25,7 +25,7 @@
               <li><a href="javascript:void(0);" class="icon" onclick="bar()"> <i class="fa fa-bars"></i></a>
               </li>
               <li><a href="index.html" ><img class="logo" src="img/BACA KOMIK ICON.png" alt=""></a></li>
-              <li><a class="respon"href="index.html" class="active">BERANDA</a> </li>
+              <li><a class="respon"href="index-masuk.html" class="active">BERANDA</a> </li>
               <li><a class="respon"href="semua.html">SEMUA KOMIK</a> </li>
               <li><a class="respon" href="terbaru.html">TERBARU</a></li>
           </div>
@@ -138,29 +138,29 @@
                     </select>
                 </div>
                 <div class="isi">
-                    <div class="cover1">
-                        <div>
-                            <a href="detail.html">
-                                <img src="img/si juki- cari kerja118.jpg" alt="cover" >
-                                <div>
-                                    <p class="judul">Si Juki</p>
-                                    <p class="episode">Episode 179</p>
-                                </div>
-                            </a>
-                        </div>
+                  <div class="cover1">
+                      <div>
+                          <a href="detail.html">
+                              <img src="img/si juki- cari kerja118.jpg" alt="cover" >
+                              <div>
+                                  <p class="judul">Si Juki</p>
+                                  <p class="episode">Episode 179</p>
+                              </div>
+                          </a>
+                      </div>
+                  </div>
+                  <div class="cover1">
+                      <div>
+                        <a href="detail.html">
+                          <img src="img/si juki-keroyokan118.jpg" alt="cover" >
+                          <div>
+                            <p class="judul">Si Juki</p>
+                            <p class="episode">Episode 178</p>
+                          </div>
+                        </a>
                     </div>
-                    <div class="cover1">
-                            <div>
-                                <a href="detail.html">
-                                    <img src="img/si juki-keroyokan118.jpg" alt="cover" >
-                                    <div>
-                                        <p class="judul">Si Juki</p>
-                                        <p class="episode">Episode 178</p>
-                                    </div>
-                                </a>
-                            </div>
-                    </div>
-                    <div class="clear"></div>
+                  </div>
+                  <div class="clear"></div>
                 </div>
                 <div class="clear"></div>
             </div>
@@ -180,7 +180,8 @@
  <div id="loading">
    <p></p>
  </div>
-
+ <button id="dark-mode"style="cursor: pointer; border-radius: 50%; background:#ccc;width: 40px; height: 40px; position: fixed; bottom: 20px; right:20px;" type="button" name="dark_light" onclick="toggleDarkLight()" title="Toggle dark/light mode">🌛</button>
+ <script src="js/dark-mode.js"></script>
  <script src="js/loading.js"></script>
  <script src="js/navbar.js"></script>
  <script src="js/modalBox.js" charset="utf-8"></script>
