--- a/detail-masuk.html
+++ b/detail-masuk.html
@@ -24,7 +24,7 @@
             <div class="kiri">
                 <li><a href="javascript:void(0);" class="icon" onclick="bar()"> <i class="fa fa-bars"></i></a></li>
                 <li><a href="index.html" ><img class="logo" src="img/BACA KOMIK ICON.png" alt=""></a></li>
-                <li><a class="respon"href="index.html" class="active">BERANDA</a> </li>
+                <li><a class="respon"href="index-masuk.html" class="active">BERANDA</a> </li>
                 <li><a class="respon"href="semua.html">SEMUA KOMIK</a> </li>
                 <li><a class="respon" href="terbaru.html">TERBARU</a></li>
             </div>
@@ -114,9 +114,11 @@
             <div class="c"> <!-- gawe tulisan chapter e-->
                 <h3>Episode</h3>
                 <div class="cc">
-                    <a href="view.html"><p>Episode 179</p>
+                    <a href="view.html">
+                        <p>Episode 179</p>
                         <p>|</p>
-                        <P>Keroyokan</P></a>
+                        <P>Keroyokan</P>
+                    </a>
                 </div>
                 <div class="cc">
                     <p>Episode 178</p>
@@ -212,6 +214,8 @@
     <div id="loading">
         <p></p>
     </div>
+    <button id="dark-mode"style="cursor: pointer; border-radius: 50%; background:#ccc;width: 40px; height: 40px; position: fixed; bottom: 20px; right:20px;" type="button" name="dark_light" onclick="toggleDarkLight()" title="Toggle dark/light mode">🌛</button>
+    <script src="js/dark-mode.js"></script>
     <script src="js/loading.js"></script>
     <script src="js/navbar.js"></script>
     <script src="js/lebihBanyak.js"></script>
