--- a/index-masuk.html
+++ b/index-masuk.html
@@ -24,7 +24,7 @@
             <div class="kiri">
                 <li><a href="javascript:void(0);" class="icon" onclick="bar()"> <i class="fa fa-bars"></i></a></li>
                 <li><a href="index.html" ><img class="logo" src="img/BACA KOMIK ICON.png" alt=""></a></li>
-                <li><a class="respon"href="index.html" class="active">BERANDA</a> </li>
+                <li><a class="respon"href="index-masuk.html" class="active">BERANDA</a> </li>
                 <li><a class="respon"href="semua.html">SEMUA KOMIK</a> </li>
                 <li><a class="respon" href="terbaru.html">TERBARU</a></li>
             </div>
