--- a/komikTerbeli.html
+++ b/komikTerbeli.html
@@ -25,7 +25,7 @@
                     <li><a href="javascript:void(0);" class="icon" onclick="bar()"> <i class="fa fa-bars"></i></a>
                     </li>
                     <li><a href="index.html" ><img class="logo" src="img/BACA KOMIK ICON.png" alt=""></a></li>
-                    <li><a class="respon"href="index.html" class="active">BERANDA</a> </li>
+                    <li><a class="respon"href="index-masuk.html" class="active">BERANDA</a> </li>
                     <li><a class="respon"href="semua.html">SEMUA KOMIK</a> </li>
                     <li><a class="respon" href="terbaru.html">TERBARU</a></li>
                 </div>
@@ -224,7 +224,8 @@
  <div id="loading">
    <p></p>
  </div>
-
+ <button id="dark-mode"style="cursor: pointer; border-radius: 50%; background:#ccc;width: 40px; height: 40px; position: fixed; bottom: 20px; right:20px;" type="button" name="dark_light" onclick="toggleDarkLight()" title="Toggle dark/light mode">🌛</button>
+ <script src="js/dark-mode.js"></script>
  <script src="js/loading.js"></script>
  <script src="js/navbar.js"></script>
  <script src="js/modalBox.js" charset="utf-8"></script>
