--- a/view.html
+++ b/view.html
@@ -22,10 +22,10 @@
     <div class="nav" id="navbar">
         <div class="isi">
             <div class="logo">
-                <a href="index.html"><img class="logo" src="img/BACA KOMIK ICON.png" alt=""></a>
+                <a href="index-masuk.html"><img class="logo" src="img/BACA KOMIK ICON.png" alt=""></a>
             </div>
             <div class="seb">
-                <a href="detail.html">Si Juki</a>
+                <a href="detail-masuk.html">Si Juki</a>
                 <select name="" id="">
                     <option value="">Episode 1</option>
                     <option value="">Episode 2</option>
