--- a/detail-masuk.html
+++ b/detail-masuk.html
@@ -23,7 +23,7 @@
         <ul>
             <div class="kiri">
                 <li><a href="javascript:void(0);" class="icon" onclick="bar()"> <i class="fa fa-bars"></i></a></li>
-                <li><a href="index.html" ><img class="logo" src="img/BACA KOMIK ICON.png" alt=""></a></li>
+                <li><a href="index-masuk.html" ><img class="logo" src="img/BACA KOMIK ICON.png" alt=""></a></li>
                 <li><a class="respon"href="index-masuk.html" class="active">BERANDA</a> </li>
                 <li><a class="respon"href="semua.html">SEMUA KOMIK</a> </li>
                 <li><a class="respon" href="terbaru.html">TERBARU</a></li>
@@ -48,7 +48,7 @@
             </div>
             <div class="clear"></div>
             <div id="bar" style="display:none;"  class="bar">
-                <a class="respon"href="index.html" class="active">BERANDA</a>
+                <a class="respon"href="index-masuk.html" class="active">BERANDA</a>
                 <a class="respon"href="semua.html">SEMUA KOMIK</a>
                 <a class="respon" href="terbaru.html">TERBARU</a>
             </div>
