--- a/admin-akun.html
+++ b/admin-akun.html
@@ -37,7 +37,72 @@
 
   <!-- konten kanan -->
   <div class="right">
-    <h1>SEMUA AKUN</h1>
+    <div class="konten">
+      <h1>SEMUA AKUN</h1>
+
+      <table>
+        <tr>
+          <th>id</th>
+          <th>email</th>
+          <th>password</th>
+          <th>nama</th>
+          <th>alamat</th>
+          <th>no. hp</th>
+          <th>foto</th>
+          <th>status</th>
+        </tr>
+        <tr>
+          <td>1</td>
+          <td>satu@gmail.com</td>
+          <td>sa7usajacuKup</td>
+          <td>satu</td>
+          <td>ya di satulah</td>
+          <td>08111111111</td>
+          <td>/img/satu.png</td>
+          <td><a class="vhijau" href="">terferifikasi</a></td>
+        </tr>
+        <tr>
+          <td>2</td>
+          <td>dua@gmail.com</td>
+          <td>da7usajacuKup</td>
+          <td>dua</td>
+          <td>ya di satulah</td>
+          <td>08222222222</td>
+          <td>/img/dua.png</td>
+          <td><a class="vkuning" href="">request verifikasi</a></td>
+        </tr>
+        <tr>
+          <td>3</td>
+          <td>tiga@gmail.com</td>
+          <td>ta7usajacuKup</td>
+          <td>tiga</td>
+          <td>ya di satulah</td>
+          <td>08333333333</td>
+          <td>/img/tiga.png</td>
+          <td><a class="vkuning" href="">request verifikasi</a></td>
+        </tr>
+        <tr>
+          <td>4</td>
+          <td>empat@gmail.com</td>
+          <td>ea7usajacuKup</td>
+          <td></td>
+          <td></td>
+          <td></td>
+          <td></td>
+          <td><a class="vbiru" href="">belum verifikasi</a></td>
+        </tr>
+        <tr>
+          <td>5</td>
+          <td>lima@gmail.com</td>
+          <td>la7usajacuKup</td>
+          <td></td>
+          <td></td>
+          <td></td>
+          <td></td>
+          <td><a class="vmerah" href="">terbanned</a></td>
+        </tr>
+      </table>
+    </div>
 
   </div>
 
