--- a/admin.html
+++ b/admin.html
@@ -38,7 +38,10 @@
 
     <!-- konten kanan -->
     <div class="right">
-      <h1>DASHBOARD</h1>
+      <div class="konten">
+        <h1>DASHBOARD</h1>
+        
+      </div>
 
     </div>
 
