--- a/detail-masuk.html
+++ b/detail-masuk.html
@@ -25,7 +25,7 @@
                 <li><a href="javascript:void(0);" class="icon" onclick="bar()"> <i class="fa fa-bars"></i></a></li>
                 <li><a href="index-masuk.html" ><img class="logo" src="img/BACA KOMIK ICON.png" alt=""></a></li>
                 <li><a class="respon"href="index-masuk.html" class="active">BERANDA</a> </li>
-                <li><a class="respon"href="semua.html">SEMUA KOMIK</a> </li>
+                <li><a class="respon"href="semua-masuk.html">SEMUA KOMIK</a> </li>
                 <li><a class="respon" href="terbaru.html">TERBARU</a></li>
             </div>
             <div class="kanan">
