coba counter gan :v

--- a/detail.html
+++ b/detail.html
@@ -73,6 +73,7 @@
                     <div class="par"><p>Faza Meonk</p><!-- penulis -->
                         <p>Bersambung | 179 Episode</p><!-- ongoing -->
                     </div>
+                    <h4>Terjual</h4><h4 id="counter"></h4>
                     <div class="btn-beli" href="javascript:void(0);" onclick="beli()">
                         <a href="javascript:void(0);" onclick="beli()">Beli</a>
                     </div>
