jquery get size info from upload

--- a/index-masuk.html
+++ b/index-masuk.html
@@ -67,8 +67,9 @@
                 <input type="text" name="" id="" placeholder="judul komik"><br>
                 <textarea name="message" style="width:300px; height:100px;" placeholder="deskripsi"></textarea><br>
                 <label for="file" style="padding-top:10px;">gambar cover</label> <br>
-                <input type="file" name="file" onchange="readURL(this);"> <br>
+                <input class="fileSize" type="file" name="file" accept="image/*" onchange="readURL(this);"> <br>
                 <img id="blah" src="http://placehold.it/180" alt="your image" /> <br>
+                <p id="size"></p>
                 <button type="button" name="button">TAMBAH</button>
             </form>
         </div>
@@ -433,19 +434,5 @@
 
 
 <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.4.1/jquery.min.js" charset="utf-8"></script>
-<script type="text/javascript">
-function readURL(input) {
-     if (input.files && input.files[0]) {
-         var reader = new FileReader();
-
-         reader.onload = function (e) {
-             $('#blah')
-                 .attr('src', e.target.result);
-         };
-
-         reader.readAsDataURL(input.files[0]);
-     }
- }
-</script>
   </body>
 </html>
