tambah js get keyboard activity

--- a/index.html
+++ b/index.html
@@ -349,5 +349,6 @@
     <script src="js/navbar.js"></script>
     <script src="js/slider.js"></script>
     <script src="js/lebihBanyak.js"></script>
+    <script src="js/keyboard_detect.js"></script>
   </body>
 </html>
