--- a/index-masuk.html
+++ b/index-masuk.html
@@ -425,14 +425,12 @@
     <button id="dark-mode"style="cursor: pointer; border-radius: 50%; background:#ccc;width: 40px; height: 40px; position: fixed; bottom: 20px; right:20px;" type="button" name="dark_light" onclick="toggleDarkLight()" title="Toggle dark/light mode">🌛</button>
 
 
+    <script src="js/jquery/jquery-3.4.1.min.js" charset="utf-8"></script>
     <script src="js/loading.js"></script>
     <script src="js/navbar.js"></script>
     <script src="js/modalBox.js"></script>
     <script src="js/slider.js"></script>
     <script src="js/dark-mode.js"></script>
     <script src="js/lebihBanyak.js"></script>
-
-
-<script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.4.1/jquery.min.js" charset="utf-8"></script>
   </body>
 </html>
