--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
                     <li><a href="javascript:void(0);" class="icon" onclick="find()"> <i class="fa fa-search" aria-hidden="true"></i> </a>
                     </li>
                     <li> <input class="respon" type="text" placeholder="Cari"> </li>
-                    <a  href="masuk.html"> MASUK</a>
+                    <a  href="masuk.html">Masuk</a>
             </div>
             <div class="clear"></div>
             <div id="bar" style="display:none;"  class="bar">
@@ -263,13 +263,15 @@
                                 <li><a href="">Komedi</a></li>
                                 <li><a href="">Petualangan</a></li>
                             </ul>
-                            <ul id="banyak" style="display: none;">
-                                <li><a href="">Aksi</a></li>
-                                <li><a href="">Drama</a></li>
-                                <li><a href="">Horor</a></li>
-                                <li><a href="">Komedi</a></li>
-                                <li><a href="">Petualangan</a></li>
-                            </ul>
+                            <div class="hidden-content slide-up">
+                                <ul id="banyak">
+                                    <li><a href="">Aksi</a></li>
+                                    <li><a href="">Drama</a></li>
+                                    <li><a href="">Horor</a></li>
+                                    <li><a href="">Komedi</a></li>
+                                    <li><a href="">Petualangan</a></li>
+                                </ul>
+                            </div>
                         </div>
                     </div>
                     <div class="btn-banyak" onclick="show()">
