up scrip jquery

--- a/admin-akun.html
+++ b/admin-akun.html
@@ -110,6 +110,8 @@
     <div id="loading">
       <p></p>
     </div>
+
+  <script src="js/jquery/jquery-3.4.1.min.js"></script>
   <script src="js/loading.js"></script>
 </body>
 </html>
