--- a/detail-masuk.html
+++ b/detail-masuk.html
@@ -57,7 +57,7 @@
             </div>
         </ul>
     </nav>
-    
+
     <div class="bg-modal" id="beli" style="display:none;">
         <div class="modal-konten">
             <div class="tutup" onclick="tutup();">+</div>
@@ -69,7 +69,7 @@
             </form>
         </div>
     </div>
-    
+
     <!-- konten -->
     <section class="ini-isi"> <!-- opo div enake  ? -->
         <div class="g">
@@ -215,6 +215,8 @@
         <p></p>
     </div>
     <button id="dark-mode"style="cursor: pointer; border-radius: 50%; background:#ccc;width: 40px; height: 40px; position: fixed; bottom: 20px; right:20px;" type="button" name="dark_light" onclick="toggleDarkLight()" title="Toggle dark/light mode">🌛</button>
+
+    <script src="js/jquery/jquery-3.4.1.min.js"></script>
     <script src="js/dark-mode.js"></script>
     <script src="js/loading.js"></script>
     <script src="js/navbar.js"></script>
