--- a/ketentuanLayanan.html
+++ b/ketentuanLayanan.html
@@ -92,6 +92,7 @@
       <p></p>
     </div>
 
+    <script src="js/jquery/jquery-3.4.1.min.js"></script>
     <script src="js/loading.js"></script>
     <script src="js/navbar.js"></script>
 </body>
