--- a/admin.html
+++ b/admin.html
@@ -40,7 +40,7 @@
     <div class="right">
       <div class="konten">
         <h1>DASHBOARD</h1>
-        
+
       </div>
 
     </div>
@@ -49,6 +49,8 @@
     <div id="loading">
       <p></p>
     </div>
+
+  <script src="js/jquery/jquery-3.4.1.min.js"></script>
   <script src="js/loading.js"></script>
 
 </body>
