--- a/daftar1.html
+++ b/daftar1.html
@@ -73,6 +73,8 @@
     <div id="loading">
       <p></p>
     </div>
+
+    <script src="js/jquery/jquery-3.4.1.min.js"></script>
     <script src="js/loading.js"></script>
     <script src="js\validsai_daftar1.js"></script>
     <script src="js/navbar.js"></script>
