--- a/daftar2.html
+++ b/daftar2.html
@@ -78,6 +78,7 @@
       <p></p>
     </div>
 
+    <script src="js/jquery/jquery-3.4.1.min.js"></script>
     <script src="js/loading.js"></script>
     <script src="js/validasi_daftar2.js" charset="utf-8"></script>
     <script src="js/navbar.js"></script>
