--- a/detail.html
+++ b/detail.html
@@ -44,7 +44,7 @@
             </div>
         </ul>
     </nav>
-    
+
     <div class="bg-modal" id="beli" style="display: none">
         <div class="pop-konten">
             <div class="tutup" onclick="tutup();">+</div>
@@ -53,7 +53,7 @@
             <a href="masuk.html" class="btn-masuk"> MASUK</a>
         </div>
     </div>
-    
+
     <!-- konten -->
     <section class="ini-isi"> <!-- opo div enake  ? -->
         <div class="g">
@@ -197,6 +197,8 @@
     <div id="loading">
         <p></p>
     </div>
+
+    <script src="js/jquery/jquery-3.4.1.min.js"></script>
     <script src="js/loading.js"></script>
     <script src="js/navbar.js"></script>
     <script src="js/lebihBanyak.js"></script>
