--- a/dukunganPelanggan.html
+++ b/dukunganPelanggan.html
@@ -76,7 +76,8 @@
     <div id="loading">
       <p></p>
     </div>
-    
+
+    <script src="js/jquery/jquery-3.4.1.min.js"></script>
     <script src="js/loading.js"></script>
     <script src="js/navbar.js"></script>
 </body>
