--- a/masuk.html
+++ b/masuk.html
@@ -77,6 +77,7 @@
     <p></p>
   </div>
 
+  <script src="js/jquery/jquery-3.4.1.min.js"></script>
   <script src="js/loading.js"></script>
   <script src="js/navbar.js"></script>
   <script src="js\validasi_masuk.js"></script>
