--- a/terbaru.html
+++ b/terbaru.html
@@ -131,6 +131,8 @@
       <p></p>
     </div>
 
+
+    <script src="js/jquery/jquery-3.4.1.min.js"></script>
     <script src="js/loading.js"></script>
     <script src="js/navbar.js"></script>
   </body>
