more button ganti jquery

--- a/index.html
+++ b/index.html
@@ -263,7 +263,7 @@
                                 <li><a href="">Komedi</a></li>
                                 <li><a href="">Petualangan</a></li>
                             </ul>
-                            <div class="hidden-content slide-up">
+                            <div class="hidden-content">
                                 <ul id="banyak">
                                     <li><a href="">Aksi</a></li>
                                     <li><a href="">Drama</a></li>
