--- a/index-masuk.html
+++ b/index-masuk.html
@@ -422,7 +422,7 @@
     <div id="loading">
       <p></p>
     </div>
-    <button id="dark-mode"style="cursor: pointer; border-radius: 50%; background:#ccc;width: 40px; height: 40px; position: fixed; bottom: 20px; right:20px;" type="button" name="dark_light" onclick="toggleDarkLight()" title="Toggle dark/light mode">🌛</button>
+    <button id="dark-mode"style="cursor: pointer; border-radius: 50%; background:#ccc;width: 40px; height: 40px; position: fixed; bottom: 20px; right:20px;" type="button" name="dark_light" title="Toggle dark/light mode">🌛</button>
 
 
     <script src="js/jquery/jquery-3.4.1.min.js"></script>
