--- a/index-masuk.html
+++ b/index-masuk.html
@@ -30,8 +30,8 @@
             </div>
             <div class="kanan">
                 <li><a href="javascript:void(0);" class="icon" onclick="find()"> <i class="fa fa-search" aria-hidden="true"></i> </a></li>
-                <i  style="margin-top:10px; color:#2095F2;" class="fa fa-user-circle fa-3x" aria-hidden="true" onclick="drop();"></i>
-                <i class="fa fa-caret-down" aria-hidden="true" onclick="drop();" style="color:#2095F2;" ></i>
+                <i  style="margin-top:10px; color:#2095F2;" class="fa fa-user-circle fa-3x" aria-hidden="true"></i>
+                <i class="fa fa-caret-down" aria-hidden="true" style="color:#2095F2;" ></i>
                 <li> <input class="respon" type="text" placeholder="   Cari"> </li>
                 <ul id="dropdown"style="display:none">
                     <li ><a href="" class="biru size18">akun@gmail.com</a></li> <br>
