--- a/index.html
+++ b/index.html
@@ -274,7 +274,7 @@
                             </div>
                         </div>
                     </div>
-                    <div class="btn-banyak" onclick="show()">
+                    <div class="btn-banyak">
                         <a href="javascript:void(0)">Tampilkan lebih banyak</a>
                         <i class="fa fa-caret-down" aria-hidden="true"></i>
                     </div>
