--- a/index.html
+++ b/index.html
@@ -33,7 +33,8 @@
             <div class="kanan">
                     <li><a href="javascript:void(0);" class="icon" onclick="find()"> <i class="fa fa-search" aria-hidden="true"></i> </a>
                     </li>
-                    <li> <input class="respon" type="text" placeholder="Cari"> </li>
+                    <li> <input class="respon" type="text" name="search" id="search" placeholder="Cari"> </li>
+                    <ul class="list-group" id="result"></ul>
                     <a  href="masuk.html">Masuk</a>
             </div>
             <div class="clear"></div>
@@ -353,5 +354,6 @@
     <script src="js/slider.js"></script>
     <script src="js/lebihBanyak.js"></script>
     <script src="js/keyboard_detect.js"></script>
+    <script src="js/searchAjax.js"></script>
   </body>
 </html>
