nyobak ajax url jquery

--- a/view.html
+++ b/view.html
@@ -43,10 +43,11 @@
         <img src="img/komik/pg4.jpg" alt="">
         <img src="img/komik/pg5.jpg" alt="">
     </div>
-    <button id="dark-mode"style="cursor: pointer; border-radius: 50%; background:#ccc;width: 40px; height: 40px; position: fixed; bottom: 20px; right:20px;" type="button" name="dark_light" onclick="toggleDarkLight()" title="Toggle dark/light mode">🌛</button>
+    <button id="dark-mode"style="cursor: pointer; border-radius: 50%; background:#ccc;width: 40px; height: 40px; position: fixed; bottom: 20px; right:20px;" type="button" name="dark_light" title="Toggle dark/light mode">🌛</button>
 
     <script src="js/jquery/jquery-3.4.1.min.js"></script>
     <script src="js/dark-mode.js"></script>
-    <script src="js/nav_view.js" charset="utf-8"></script>
+    <script src="js/nav_view.js"></script>
+    <script src="js/ajax.js"></script>
 </body>
 </html>
