ubah agar lebih efisien sedikit :v

--- a/index.html
+++ b/index.html
@@ -264,15 +264,13 @@
                                 <li><a href="">Komedi</a></li>
                                 <li><a href="">Petualangan</a></li>
                             </ul>
-                            <div class="hidden-content">
-                                <ul id="banyak">
+                                <ul id="banyak" style="display: none;">
                                     <li><a href="">Aksi</a></li>
                                     <li><a href="">Drama</a></li>
                                     <li><a href="">Horor</a></li>
                                     <li><a href="">Komedi</a></li>
                                     <li><a href="">Petualangan</a></li>
                                 </ul>
-                            </div>
                         </div>
                     </div>
                     <div class="btn-banyak">
