--- a/admin.html
+++ b/admin.html
@@ -40,7 +40,22 @@
     <div class="right">
       <div class="konten">
         <h1>DASHBOARD</h1>
+          <div>
+            <div class="tengah">
+              <div class="kotak">
+                <div class="clear"></div>
+                <div class="kotak1">
 
+                </div>
+                <img src="" alt="">
+                <p>10000</p>
+              </div>
+              <div class="kotak">
+                  
+                  <img src="" alt="">
+                  <p>10000</p>
+                </div>
+          </div>
       </div>
 
     </div>
