--- a/admin.html
+++ b/admin.html
@@ -43,18 +43,20 @@
           <div>
             <div class="tengah">
               <div class="kotak">
-                <div class="clear"></div>
                 <div class="kotak1">
-
+                  <p>10800</p>
                 </div>
-                <img src="" alt="">
-                <p>10000</p>
               </div>
               <div class="kotak">
-                  
-                  <img src="" alt="">
-                  <p>10000</p>
+                <div class="kotak2">
+                  <p>5090</p>
                 </div>
+              </div>
+              <div class="kotak">
+                <div class="kotak3">
+                  <p>7145</p>
+                </div>
+              </div>
           </div>
       </div>
 
