--- a/admin.html
+++ b/admin.html
@@ -44,17 +44,17 @@
             <div class="tengah">
               <div class="kotak">
                 <div class="kotak1">
-                  <p>10800</p>
+                  <p id="counter"></p>
                 </div>
               </div>
               <div class="kotak">
                 <div class="kotak2">
-                  <p>5090</p>
+                  <p id="counter1"></p>
                 </div>
               </div>
               <div class="kotak">
                 <div class="kotak3">
-                  <p>7145</p>
+                  <p id="counter2"></p>
                 </div>
               </div>
           </div>
@@ -69,6 +69,7 @@
 
   <script src="js/jquery/jquery-3.4.1.min.js"></script>
   <script src="js/loading.js"></script>
+  <script src="js/counter.js"></script>
 
 </body>
 </html>
