--- a/index-masuk.html
+++ b/index-masuk.html
@@ -6,8 +6,10 @@
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <link rel="stylesheet" href="css/style.css">
     <link rel="stylesheet" href="css/home-masuk.css">
+    <link rel="stylesheet" href="css/modal_verifikasi.css">
     <link href="https://fonts.googleapis.com/css?family=Roboto&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
+    <script src="https://kit.fontawesome.com/a076d05399.js"></script>
     <title>BACA KOMIK</title>
 <!-- favicon -->
     <link rel="apple-touch-icon" sizes="180x180" href="img/favicon/apple-touch-icon.png">
@@ -34,7 +36,7 @@
                 <i class="fa fa-caret-down" aria-hidden="true" style="color:#2095F2;" ></i>
                 <li> <input class="respon" type="text" placeholder="   Cari"> </li>
                 <ul id="dropdown"style="display:none">
-                    <li ><a href="" class="biru size18">akun@gmail.com</a></li> <br>
+                    <li ><a href="#" class="biru size18">akun@gmail.com</a></li> <br>
                     <li onclick="verif();"><a class="hijau size14" href="javascript:void(0);">Belum terverifikasi</a></li> <br>
                     <li class="garis" onclick="uang();"><a class="size14"  href="javascript:void(0);">Rp. 1,000,000 <i class="fa fa-plus-square" aria-hidden="true"></i></a></li><br>
                     <li><a href="" style="color:black; cursor:default;">komik</a></li> <br>
@@ -58,10 +60,21 @@
     </nav>
 
 <!-- modal box -->
+<div class="content" >
+  <div class="header">
+    <!-- <p>Data Tersimpan</p> -->
+    <label for="click" class="fas fa-times" onclick="closeverif(); tutup();"></label>
+  </div>
+  <label for="click" class="fas fa-check" ></label>
+  <p>selamat! Komik berhasil ditambahkan dan telah tersimpan.</p>
+  <div class="line"></div>
+  <label for="click" class="close-btn" onclick="closeverif(); tutup();">Close</label>
+</div>
+
 <!-- untuk tambah komik -->
     <div class="bg-modal" id="tambah" style="display:none;">
         <div class="modal-konten">
-            <div class="tutup" onclick="tutup();">+</div>
+            <div class="tutup" onclick="tutup();closeverif();">+</div>
             <h1>Tambah komik</h1>
             <form class="" action="index.html" method="post">
                 <input type="text" name="" id="" placeholder="judul komik"><br>
@@ -70,10 +83,12 @@
                 <input class="fileSize" type="file" name="file" accept="image/*" onchange="readURL(this);"> <br>
                 <img id="blah" src="http://placehold.it/180" alt="your image" /> <br>
                 <p id="size"></p>
-                <button type="button" name="button">TAMBAH</button>
+                <button type="button" name="button" onclick="verifikasi();">verifikasi</button>
+
             </form>
         </div>
     </div>
+
 <!-- untuk verifikasi -->
     <div class="bg-modal" id="verif" style="display:none;">
         <div class="modal-konten">
@@ -86,7 +101,7 @@
                 <input type="date" name="" id=""><br>
                 <label for="file" style="padding-top:10px;">foto selfie dengan ktp</label> <br>
                 <input type="file" name="file" id="" onchange="readURL(this);"> <br>
-                <button type="button" name="button">verifikasi</button>
+                <button type="button" name="button" onclick="verifikasi();">verifikasi</button>
             </form>
         </div>
     </div>
@@ -103,7 +118,7 @@
                     <input type="radio" name="bayar" value="indoktober"> indoktober<br>
                     <input type="radio" name="bayar" value="alfaoktober"> alfaoktober<br>
                 </div>
-                <button type="button" name="button">TAMBAH</button>
+                <button type="button" name="button" onclick="verifikasi();">TAMBAH</button>
             </form>
         </div>
     </div>
@@ -119,7 +134,7 @@
                 <input type="date" name="" id=""><br>
                 <label for="file" style="padding-top:10px;">foto selfie dengan ktp</label> <br>
                 <input type="file" name="file" id="" > <br>
-                <button type="button" name="button">verifikasi</button>
+                <button type="button" name="button" onclick="verifikasi();">verifikasi</button>
             </form>
         </div>
     </div>
@@ -438,10 +453,5 @@
     <script src="js/dark-mode.js"></script>
     <script src="js/lebihBanyak.js"></script>
 
-    <script type="text/javascript">
-      function signout(){
-        window.location.href = "index.html";
-      }
-    </script>
   </body>
 </html>
