--- a/index-masuk.html
+++ b/index-masuk.html
@@ -80,9 +80,9 @@
                 <input type="text" name="" id="" placeholder="judul komik"><br>
                 <textarea name="message" style="width:300px; height:100px;" placeholder="deskripsi"></textarea><br>
                 <label for="file" style="padding-top:10px;">gambar cover</label> <br>
-                <input class="fileSize" type="file" name="file" accept="image/*" onchange="readURL(this);"> <br>
-                <img id="blah" src="http://placehold.it/180" alt="your image" /> <br>
-                <p id="size"></p>
+                <input class="fileSiz1e" type="file" name="file" accept="image/*" onchange="readURL_tambahkomik(this);"> <br>
+                <img id="blah1" src="http://placehold.it/180" alt="your image" /> <br>
+                <p id="size1"></p>
                 <button type="button" name="button" onclick="verifikasi();">verifikasi</button>
 
             </form>
@@ -100,7 +100,9 @@
                 <input type="text" name="" id="" placeholder="alamat"><br>
                 <input type="date" name="" id=""><br>
                 <label for="file" style="padding-top:10px;">foto selfie dengan ktp</label> <br>
-                <input type="file" name="file" id="" onchange="readURL(this);"> <br>
+                <input class="fileSize2" type="file" name="file" accept="image/*" onchange="readURL_verifakun(this);"> <br>
+                <img id="blah2" src="http://placehold.it/180" alt="your image" /> <br>
+                <p id="size2"></p>
                 <button type="button" name="button" onclick="verifikasi();">verifikasi</button>
             </form>
         </div>
@@ -133,7 +135,9 @@
                 <input type="text" name="" id="" placeholder="alamat"><br>
                 <input type="date" name="" id=""><br>
                 <label for="file" style="padding-top:10px;">foto selfie dengan ktp</label> <br>
-                <input type="file" name="file" id="" > <br>
+                <input class="fileSize3" type="file" name="file" accept="image/*" onchange="readURL_editakun(this);"> <br>
+                <img id="blah3" src="http://placehold.it/180" alt="your image" /> <br>
+                <p id="size3"></p>
                 <button type="button" name="button" onclick="verifikasi();">verifikasi</button>
             </form>
         </div>
