fix input file gambar dari komputer

--- a/index-masuk.html
+++ b/index-masuk.html
@@ -82,10 +82,9 @@
                 <label for="file" style="padding-top:10px;">gambar cover</label> <br>
                 <input class="fileSiz1e" type="file" name="file" accept="image/*" onchange="readURL_tambahkomik(this);"> <br>
                 <img id="blah1" src="http://placehold.it/180" alt="your image" /> <br>
-                <p id="size1"></p>
-                <button type="button" name="button" onclick="verifikasi();">verifikasi</button>
-
+                <p id="size1">Ukuran file : </p>
             </form>
+            <button type="button" name="button" onclick="verifikasi();">verifikasi</button>
         </div>
     </div>
 
@@ -102,9 +101,9 @@
                 <label for="file" style="padding-top:10px;">foto selfie dengan ktp</label> <br>
                 <input class="fileSize2" type="file" name="file" accept="image/*" onchange="readURL_verifakun(this);"> <br>
                 <img id="blah2" src="http://placehold.it/180" alt="your image" /> <br>
-                <p id="size2"></p>
-                <button type="button" name="button" onclick="verifikasi();">verifikasi</button>
+                <p id="size2">Ukuran file : </p>
             </form>
+            <button type="button" name="button" onclick="verifikasi();">verifikasi</button>
         </div>
     </div>
 <!-- untuk tambah uang -->
@@ -120,8 +119,8 @@
                     <input type="radio" name="bayar" value="indoktober"> indoktober<br>
                     <input type="radio" name="bayar" value="alfaoktober"> alfaoktober<br>
                 </div>
-                <button type="button" name="button" onclick="verifikasi();">TAMBAH</button>
             </form>
+            <button type="button" name="button" onclick="verifikasi();">TAMBAH</button>
         </div>
     </div>
 <!-- untuk edit profil -->
@@ -137,9 +136,9 @@
                 <label for="file" style="padding-top:10px;">foto selfie dengan ktp</label> <br>
                 <input class="fileSize3" type="file" name="file" accept="image/*" onchange="readURL_editakun(this);"> <br>
                 <img id="blah3" src="http://placehold.it/180" alt="your image" /> <br>
-                <p id="size3"></p>
-                <button type="button" name="button" onclick="verifikasi();">verifikasi</button>
+                <p id="size3">Ukuran file : </p>
             </form>
+            <button type="button" name="button" onclick="verifikasi();">verifikasi</button>
         </div>
     </div>
 <!-- untuk peringatan keluar akun -->
