--- a/index-masuk.html
+++ b/index-masuk.html
@@ -63,24 +63,35 @@
 <div class="content" >
   <div class="header">
     <!-- <p>Data Tersimpan</p> -->
-    <label for="click" class="fas fa-times" onclick="closeverif(); tutup();"></label>
+    <label for="click" class="fas fa-times" onclick="closeverif();"></label>
   </div>
   <label for="click" class="fas fa-check" ></label>
   <p>selamat! Komik berhasil ditambahkan dan telah tersimpan.</p>
   <div class="line"></div>
-  <label for="click" class="close-btn" onclick="closeverif(); tutup();">Close</label>
+  <label for="click" class="close-btn" onclick="closeverif();">Close</label>
+</div>
+
+<div class="content2" >
+  <div class="header2">
+    <!-- <p>Data Tersimpan</p> -->
+    <label for="click" class="fas fa-times" onclick="closeverif();"></label>
+  </div>
+  <label id="kedua" for="click" class="fas fa-times" ></label>
+  <p> input masih ada yang kosong nih, isi dulu ya kak.</p>
+  <div class="line"></div>
+  <label for="click" class="close-btn2" onclick="closeverif();">Close</label>
 </div>
 
 <!-- untuk tambah komik -->
     <div class="bg-modal" id="tambah" style="display:none;">
         <div class="modal-konten">
-            <div class="tutup" onclick="tutup();closeverif();">+</div>
+            <div class="tutup" onclick="tutup();">+</div>
             <h1>Tambah komik</h1>
             <form class="" action="index.html" method="post">
                 <input type="text" name="" id="" placeholder="judul komik"><br>
                 <textarea name="message" style="width:300px; height:100px;" placeholder="deskripsi"></textarea><br>
                 <label for="file" style="padding-top:10px;">gambar cover</label> <br>
-                <input class="fileSiz1e" type="file" name="file" accept="image/*" onchange="readURL_tambahkomik(this);"> <br>
+                <input class="fileSize1" type="file" name="file" accept="image/*" onchange="readURL_tambahkomik(this);"> <br>
                 <img id="blah1" src="http://placehold.it/180" alt="your image" /> <br>
                 <p id="size1">Ukuran file : </p>
             </form>
