--- a/masuk.html
+++ b/masuk.html
@@ -8,6 +8,7 @@
     <link rel="stylesheet" href="css/masuk_daftar.css">
     <link href="https://fonts.googleapis.com/css?family=Roboto&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
+    <script src="https://kit.fontawesome.com/a076d05399.js"></script>
     <title>BACA KOMIK</title>
     <!-- favicon -->
     <link rel="apple-touch-icon" sizes="180x180" href="img/favicon/apple-touch-icon.png">
@@ -48,18 +49,27 @@
             </ul>
         </nav>
 
+<!-- modal -->
+<div class="content2" >
+  <div class="header2">
+    <!-- <p>Data Tersimpan</p> -->
+    <label for="click" class="fas fa-times" onclick="closemasuk();"></label>
+  </div>
+  <label id="kedua" for="click" class="fas fa-times" ></label>
+  <p> input masih ada yang kosong nih, masukan dulu ya.</p>
+  <div class="line"></div>
+  <label for="click" class="close-btn2" onclick="closemasuk();">Close</label>
+</div>
+
 <!-- conten -->
-    
+
+
     <div class="konten masuk">
       <form action="">
         <h1>MASUK</h1>
         <input  type="email" name="email" id="myemail" placeholder="Email"><br>
-        <p style="display:none;color:red;" id="email">*email tidak boleh kosong</p>
-        <p style="display:none;color:red;" id="email1">*email salah</p>
         <input  type="password" name="password" id="mypass" placeholder="Kata sandi"><br>
-        <!-- <p style="display:none;color:red;" id="pass">*password tidak boleh kosong</p> -->
-                <button type="">Masuk</button> <br>
-        
+        <button type="">Masuk</button> <br>
         <a href="daftar1.html"><u>Belum punya akun?</u></a>
       </form>
     </div>
