--- a/index.html
+++ b/index.html
@@ -51,7 +51,7 @@
 
         <!-- KONTEN -->
 
-    <div class="konten">
+    <div class="konten" onclick="hilang();">
         <div class="main-kiri">
             <div class="isi">
                 <div class="isi2">
